[package]
name = "bellperson-nonnative"
version = "0.1.0"

[dependencies]
rand = "0.4"
rug = { version = "1.10", default-features = false, features = ["integer", "serde", "rand"] }
bellperson = "0.19.1"
ff = {version = "0.11", features = ["derive"]}
byteorder = "0.3.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"