[package]
name = "bellperson-nonnative"
version = "0.2.0"
description = "Non-native arithmetic for SNARKs"
documentation = "https://docs.rs/bellperson-nonnative"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
rand = "0.4"
rug = { version = "1.10", default-features = false, features = ["integer", "serde", "rand"] }
bellperson = { version = "0.20", default-features = false }
ff = { version = "0.11", features = ["derive"] }
byteorder = "0.3.0"

[features]
default = ["bellperson/default"]
wasm = ["bellperson/wasm"]

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
